HTML in Nutshell

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,15 @@
     <link rel = "shortcut icon" href="C:\Users\Sourav Prasanna\OneDrive\Desktop\BridgelabsJS\learninghtmlccs\assets\fav.png">
 </head>
 <body>
-     
+     <h1>Bridgelabs is cool</h1>
+     <img src = "C:\Users\Sourav Prasanna\OneDrive\Desktop\BridgelabsJS\learninghtmlccs\assets\BL_logo_square_png.png" alt = "Hover text" width="25%">
+     <p>At Bridgelabs, we're a techie community of</p>
+     <ul>
+        <li>technologists</li>
+        <li>thinkers</li>
+        <li>builders</li>
+     </ul>
+     <p>Working together to keep the Tech employability of Engineers alive and accessibke</p>
+     <p>To know aboutt us, visit <a href = "https://www.bridgelabz.com/">Bridgelabs</a> to learn even more about our mission i.e, <strong>Employability to all</strong></p>
 </body>
 </html>
