--- a/pages/index.html
+++ b/pages/index.html
@@ -6,17 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bridgelabz HTML Learning</title>
     <link rel = "shortcut icon" href="C:\Users\Sourav Prasanna\OneDrive\Desktop\BridgelabsJS\learninghtmlccs\assets\fav.png">
+    <style>
+        html{
+            font-size: 14px;
+            font-family: 'Open Sans', sans-serif;
+            background-color:darkblue;
+        }
+        body {
+            background-color: orange;
+            width: 600px;
+            margin: 0 auto;
+            padding: 20px 20px 20px 20px;
+            border: 5px solid black;
+        }
+        h1 {
+            font-size: 60px;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+            color: blue;
+            text-shadow: 3px 3px 3px black;
+        }
+        img {
+            display: block;
+            margin: 0 auto;
+        }
+        p, li {
+            font-size: 16px;
+            line-height: 2;
+            letter-spacing: 1px;
+        }
+    </style>
 </head>
 <body>
      <h1>Bridgelabs is cool</h1>
-     <img src = "C:\Users\Sourav Prasanna\OneDrive\Desktop\BridgelabsJS\learninghtmlccs\assets\BL_logo_square_png.png" alt = "Hover text" width="25%">
+     <img src = "C:\Users\Sourav Prasanna\OneDrive\Desktop\BridgelabsJS\learninghtmlccs\assets\BL_logo_square_jpg.jpg" alt = "Hover text" width="25%">
      <p>At Bridgelabs, we're a techie community of</p>
      <ul>
         <li>technologists</li>
         <li>thinkers</li>
         <li>builders</li>
      </ul>
-     <p>Working together to keep the Tech employability of Engineers alive and accessibke</p>
+     <p>Working together to keep the Tech employability of Engineers alive and accessible, so Tech companies worldwide can get contributors and creators for technology solutions. We believe this act of human collaboration across an employability platform is essential to individual growth and our collective future.</p>
      <p>To know aboutt us, visit <a href = "https://www.bridgelabz.com/">Bridgelabs</a> to learn even more about our mission i.e, <strong>Employability to all</strong></p>
 </body>
 </html>
